--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:drop": "npm run typeorm schema:drop -- -d ./src/db/postgres.ts",
     "db:migration:create": "npm run typeorm -- migration:create",
     "db:migration:generate": "npm run typeorm -- migration:generate -d ./src/db/postgres.ts",
     "db:migrate": "npm run typeorm migration:run -- -d ./src/db/postgres.ts",
@@ -24,12 +25,15 @@
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/cqrs": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
