--- a/api/package.json
+++ b/api/package.json
@@ -36,8 +36,12 @@
     "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "connect-redis": "^9.0.0",
     "dotenv": "^17.2.2",
+    "express-session": "^1.18.2",
+    "ioredis": "^5.8.0",
     "pg": "^8.16.3",
+    "redis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
