--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "nodenext",
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "moduleResolution": "nodenext",
     "resolvePackageJsonExports": true,
     "esModuleInterop": true,
