--- a/api/package.json
+++ b/api/package.json
@@ -17,10 +17,14 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:drop": "npm run typeorm schema:drop -- -d ./src/db/postgres.ts",
+    "db:drop": "npm run typeorm schema:drop -- -d ./src/db/datasource.ts",
+    "db:drop:test": "cross-env NODE_ENV=test npm run typeorm schema:drop -- -d ./src/db/datasource.ts",
     "db:migration:create": "npm run typeorm -- migration:create",
-    "db:migration:generate": "npm run typeorm -- migration:generate -d ./src/db/postgres.ts",
+    "db:migration:generate": "npm run typeorm -- migration:generate -d ./src/db/datasource.ts",
     "db:migrate": "npm run typeorm migration:run -- -d ./src/db/datasource.ts",
+    "db:migrate:test": "cross-env NODE_ENV=test ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./src/db/datasource.ts",
+    "db:seed": "cross-env NODE_ENV=test ts-node -r tsconfig-paths/register src/seeding/seeder.ts",
+    "db:reset": "npm run db:drop && npm run db:migrate",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'"
   },
@@ -45,13 +49,12 @@
     "redis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.27"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
@@ -74,6 +77,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.27",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
