--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "connect-redis": "^9.0.0",
+    "cookie-signature": "^1.2.2",
     "dotenv": "^17.2.2",
     "express-session": "^1.18.2",
     "ioredis": "^5.8.0",
